update sql docs